# ByClaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile-all  README.md  README_EN.md  SECURITY.md  SUPER_AGENT_CHAT_FLOW.md
.claude/: settings.local.json
byclaw-data/: .env.example  .env.start.sh.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  start.bat  start.sh
byclaw-data/src/byclaw_data/: __init__.py  byclaw_data_clarification.py  main.py  model_environment.py  runtime.py  worker.py
byclaw-data/src/byclaw_data/commands/: __init__.py
byclaw-data/src/byclaw_data/mcp/: __init__.py  by_datacloud_sources.py  main.py  result_file_storage.py  routes.py
byclaw-data/src/byclaw_data/plugins/recommended_question_plugins/: __init__.py  recommended_questions.py
byclaw-data/src/byclaw_data/term_build_service/: __init__.py  executor.py  main.py  models.py  repository.py  routes.py  service.py  settings.py  worker.py
byclaw-data/tests/: __init__.py  conftest.py  test_dynamic_agent.py  test_e2e_clarification.py  test_func_stream.py  test_init_agent_conf_db_query.py  test_mcp_tools_list_headers.py  test_model_config_refresh.py  test_query_clarification_gateway_stream.py  test_resource_list_extraction.py  test_static_checks_paradigm_removal.py  test_t5_worker_ontology_agent.py  test_term_build_service.py
byclaw-qa/: .dockerignore  Dockerfile  README.md  minio_agent_config.py  minio_client.py  pyproject.toml  redis_agent_config.py  redis_model_config.py  start.sh  worker.py
byclaw-qa/src/: api.py  byclaw_plugin.py  exceptions.py  i18n.py  middleware.py  minio_agent_config.py  minio_client.py  redis_agent_config.py  redis_model_config.py  worker.py
byclaw-qa/tests/: conftest.py  test_api.py  test_minio_agent_config.py  test_minio_client.py  test_redis_agent_config.py  test_redis_model_config.py  test_start_env_mapping.py  test_worker.py
(+3747 files in other folders)
