[project]
name = "byclaw-data"
version = "0.1.0"
description = "byclaw-data stack: DataCloud MCP service + Gateway worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "by-datacloud>=0.1.36",
    "langchain-openai>=1.1.11",
    "by-framework>=0.2.0",
    "by-framework-history-byclaw>=0.0.1",
]

[project.scripts]
byclaw-data-worker = "byclaw_data.main:main"
byclaw-data-mcp = "byclaw_data.mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/byclaw_data"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
explicit = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.uv.sources]
by-framework = { index = "pypi" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 需要本机已启动 datacloud_data_service（见 by-datacloud launch）",
]
